--- a/popup.html
+++ b/popup.html
@@ -39,7 +39,7 @@
         </div>
         <div>
           <button class="btn btn-primary" id="removeLock">Remove selection lock</button>
-          <button class="btn btn-primary" id="copyLock">Remove copy lock (in dev)</button>
+          <button class="btn btn-primary" id="copyLock">Copy Fix</button>      
         </div>
     </div>
     <script src="/scripts/extension.js" type="text/javascript"></script>
