--- a/popup.html
+++ b/popup.html
@@ -38,8 +38,7 @@
           <p id="status"> </p>
         </div>
         <div>
-          <button class="btn btn-primary" id="removeLock">Remove selection lock</button>
-          <button class="btn btn-primary" id="copyLock">Copy Fix</button>      
+          <button class="btn btn-primary" id="removeLock">Fix all!</button>   
         </div>
     </div>
     <script src="/scripts/extension.js" type="text/javascript"></script>
