--- a/popup.html
+++ b/popup.html
@@ -35,13 +35,13 @@
     <div class="container">
         <div class="page-header">
           <h3>UserSelecter</h3>
-          <p id="status"> </p>
+          <p id="status"></p>
         </div>
         <div>
           <button class="btn btn-primary" id="removeLock">Fix all!</button>   
         </div>
     </div>
-    <script src="/scripts/extension.js" type="text/javascript"></script>
+    <script src="/scripts/popup/popup.js" type="text/javascript"></script>
 </body>
 </html>
 
