delete bootstrap dependency

--- a/popup.html
+++ b/popup.html
@@ -1,47 +1,22 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-	    <style>
-      .container {
-        min-height: 200px;
-        width: 250px;
-        border-radius: 2px;
-        background: white;
-      }
-      body {
-        font-family: "Segoe UI", "Lucida Grande", Tahoma, sans-serif;
-        font-size: 100%;
-      }
-      #status {
-        white-space: pre;
-        text-overflow: ellipsis;
-        overflow: hidden;
-        max-width: 400px;
-      }
-      .patient-list {
-        max-height: 250px;
-        overflow-y: scroll;
-        overflow-x: hidden;
-        max-width: 100%;
-      }
-      .btn {
-        margin: 6px;
-      }
-    </style>
+  <link rel="stylesheet" href="css/popup.css">
 </head>
+
 <body>
 
-    <div class="container">
-        <div class="page-header">
-          <h3>UserSelecter</h3>
-          <p id="status"></p>
-        </div>
-        <div>
-          <button class="btn btn-primary" id="removeLock">Fix all!</button>   
-        </div>
+  <div class="container">
+    <div class="page-header">
+      <h3>CopyUnlocker</h3>
+      <p id="status"></p>
     </div>
-    <script src="/scripts/popup/popup.js" type="text/javascript"></script>
+    <div>
+      <button class="btn btn-primary" id="removeLock">Unlock Select/Copy</button>
+    </div>
+  </div>
+  <script src="/scripts/popup/popup.js" type="text/javascript"></script>
 </body>
-</html>
 
+</html>
